# LinuxCppLessons

./: .gitignore  Thread_read
Chat/: Chat.pro  baseconnect.h  baseconnection.h  main.cpp  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h
Compiler/: Grammar  hello  hello_world.s
Compiler/test_compiler/: CMakeLists.txt  main.cpp
ConstPoint/: ConstPoint.pro  main.cpp
MagicChess/: main.cpp
Match/: main.cpp
OpenGL/: OpenGL.pro  datamodel.cpp  datamodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  point_t.cpp  point_t.h
Parallel/: Parallel.pro  main.cpp
Perceptron/: Perceptron.pro  confusion_matrix.cpp  confusion_matrix.h  dataset_t.cpp  dataset_t.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  perceptron.cpp  perceptron.h  test.txt
PietIDE_GUI/: PietIDE_GUI.pro  mainwindow.cpp  mainwindow.ui
PythonCourse/: Course.tex  gen_tex.py  generate.py  table.tex
QtChat/: QtChat.pro  client.cpp  client.h  clientnetwork.cpp  clientnetwork.h  clientwindow.cpp  clientwindow.h  listonline.cpp  listonline.h  listonline.ui  listonlineclient.cpp  listonlineclient.h  listonlineclient.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  queuemessage.cpp  queuemessage.h  server.cpp  server.h  servernetwork.cpp  servernetwork.h  serveronlinewindow.cpp  serveronlinewindow.h  serverwindow.cpp  serverwindow.h
QtClient/: QtClient.pro  guiclient.cpp  guiclient.h  guiclient.ui  insetdialog.cpp  insetdialog.h  insetdialog.ui  listonline.cpp  listonline.h  listonline.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  (+6 more)
(+129 files in other folders)
